kubernetes/dev/app/deploy.yaml
#manifest script for public frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spleet-public-frontend-dev
  namespace: spleet-public-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spleet-public-frontend-dev
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: spleet-public-frontend-dev
    spec:
      containers:
        - name: spleet-public-frontend-dev
          image: spleet/spleet-public-frontend-dev:184-b6469c21c62e3e1ef97dfe23cf8d8e104ea2db7d
          ports:
          - containerPort: 3001
            protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 400
            periodSeconds: 30
            failureThreshold: 4
            timeoutSeconds: 10
          readinessProbe:
             httpGet:
               path: /
               port: 3001
             initialDelaySeconds: 400
             periodSeconds: 30
             timeoutSeconds: 10
             successThreshold: 1
          
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: regcred
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600               

---

apiVersion: v1
kind: Service
metadata:
  name: spleet-public-frontend-dev
  namespace: spleet-public-frontend
  labels:
    app: spleet-public-frontend-dev
    service: spleet-public-frontend-dev
spec:
  ports:
  - port: 3001
    name: http
  selector:
    app: spleet-public-frontend-dev

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spleet-public-frontend-dev
  namespace: spleet-public-frontend
  annotations:
    nginx.ingress.kubernetes.io/default-backend: ingress-nginx-controller
    kubernetes.io/ingress.class: nginx 
    ## tells ingress to check for regex in the config file
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, PATCH, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-max-age: "600"
#     nginx.ingress.kubernetes.io/configuration-snippet: |
#     more_set_headers "Access-Control-Allow-Origin: $http_origin";
    #certmanager.k8s.io/cluster-issuer: letsencrypt
#     kubernetes.io/ingress.class: nginx
#     service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"

spec:
  rules:
  - host: "spleet.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: spleet-public-frontend-dev
            port:
              number: 3001




#manifest script for backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-backend
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev-backend
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: dev-backend
    spec:
      volumes:
       - name: verifybucketupload
         secret:
           secretName: verify-dev-statement-upload
      containers:
        - name: dev-backend
          image: spleet/backend-dev-app:122-69d1262a6b4c812b2d3a14acf132ea9f10fdde32
          volumeMounts:
            - name: verifybucketupload
              mountPath: /app/verifybucketupload
          ports:
          - containerPort: 3000
            protocol: TCP
          livenessProbe:
            httpGet:
             path: /v1/health-check
             port: 3000
            initialDelaySeconds: 400
            periodSeconds: 30
            failureThreshold: 4
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /v1/health-check
              port: 3000
            initialDelaySeconds: 400
            periodSeconds: 30
            failureThreshold: 4
            timeoutSeconds: 10

          
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: regcred
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---
apiVersion: v1
kind: Service
metadata:
  name: dev-backend
  namespace: dev
  labels:
    app: dev-backend
    service: dev-backend
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: dev-backend

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-backend
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/default-backend: ingress-nginx-controller
    kubernetes.io/ingress.class: nginx 
    ## tells ingress to check for regex in the config file
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, PATCH, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://dashboard.spleet.dev, https://rnpl.spleet.dev, https://admin.spleet.dev, http://localhost:3000, http://localhost:3001, http://localhost:8082, https://seo.spleet.dev, https://new-listing.spleet.dev, https://sflandspleetops.spleet.dev, https://spleet-shortlet.spleet.dev/"
    nginx.ingress.kubernetes.io/cors-max-age: "600"
#     nginx.ingress.kubernetes.io/configuration-snippet: |
#     more_set_headers "Access-Control-Allow-Origin: $http_origin";
    #certmanager.k8s.io/cluster-issuer: letsencrypt
#     kubernetes.io/ingress.class: nginx
#     service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"

spec:
  rules:
  - host: "api.spleet.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dev-backend
            port:
              number: 3000


#manifest script for frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newfrontend-dev
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newfrontend-dev
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: newfrontend-dev
    spec:
      containers:
        - name: newfrontend-dev
          image: spleet/newfrontend-dev:106-a15145e9d8b71b2b5e75195b809bb699913e93a6
          ports:
          - containerPort: 80
            protocol: TCP
          livenessProbe:
            httpGet:
             path: /
             port: 80
            initialDelaySeconds: 400
            periodSeconds: 30
            failureThreshold: 4
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 400
            periodSeconds: 30
            failureThreshold: 4
            timeoutSeconds: 10
          
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: regcred
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---
apiVersion: v1
kind: Service
metadata:
  name: newfrontend-dev
  namespace: dev
  labels:
    app: newfrontend-dev
    service: newfrontend-dev
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: newfrontend-dev

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newfrontend-dev
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/default-backend: ingress-nginx-controller
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    kubernetes.io/ingress.class: nginx 
    ## tells ingress to check for regex in the config file
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, PATCH, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-max-age: "600"
#     nginx.ingress.kubernetes.io/configuration-snippet: |
#     more_set_headers "Access-Control-Allow-Origin: $http_origin";
    #certmanager.k8s.io/cluster-issuer: letsencrypt
#     kubernetes.io/ingress.class: nginx
#     service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"

spec:
  rules:
  - host: "dashboard.spleet.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: newfrontend-dev
            port:
              number: 80


#manifest script for rnpl
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rnpl-backend
  namespace: rnpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rnpl-backend
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rnpl-backend
    spec:
      volumes:
       - name: rnplbucketupload
         secret:
           secretName: rnpl-dev-statement-upload
      containers:
        - name: rnpl-backend
          image: spleet/backend-dev-rnpl:61-83600ec2effe279f90133873f6f16f741b594f53
          volumeMounts:
            - name: rnplbucketupload
              mountPath: /app/rnplbucketupload
          ports:
            - containerPort: 4000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /v1/health-check
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 45
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /v1/health-check
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 45
          terminationMessagePath: /rnpl/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: regcred
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600


---
apiVersion: v1
kind: Service
metadata:
  name: rnpl-backend
  namespace: rnpl
  labels:
    app: rnpl-backend
    service: rnpl-backend
spec:
  ports:
  - port: 4000
    name: http
  selector:
    app: rnpl-backend

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rnpl-backend
  namespace: rnpl
  annotations:
    nginx.ingress.kubernetes.io/default-backend: ingress-nginx-controller
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    ## tells ingress to check for regex in the config file
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, PATCH, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-max-age: "600"
#     nginx.ingress.kubernetes.io/configuration-snippet: |
#     more_set_headers "Access-Control-Allow-Origin: $http_origin";
    #certmanager.k8s.io/cluster-issuer: letsencrypt
#     kubernetes.io/ingress.class: nginx
#     service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"

spec:
  rules:
  - host: "rnpl.spleet.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rnpl-backend
            port:
              number: 4000




#manifest script for admin

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-admin-frontend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-admin-frontend
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: dev-admin-frontend
    spec:
      containers:
        - name: dev-admin-frontend
          image: spleet/admin-front-end:2-7375a6b4f7427ffb624ae67e4af6f1e51651723d
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 300Mi
            requests:
              cpu: 50m
              memory: 100Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: regcred
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
apiVersion: v1
kind: Service
metadata:
  name: dev-admin-frontend
  namespace: dev
  labels:
    app: dev-admin-frontend
    service: dev-admin-frontend
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: dev-admin-frontend
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-admin-frontend-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "admin.spleet.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dev-admin-frontend
            port:
              number: 80



#manifest script for new-listing
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-listing-dev
  namespace: new-listing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: new-listing-dev
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: new-listing-dev
    spec:
      containers:
        - name: new-listing-dev
          image: spleet/new-listing-dev:11-a8803bafff9a956520b6364e1b197d6eca727738
          ports:
          - containerPort: 80
            protocol: TCP
          livenessProbe:
            httpGet:
             path: /
             port: 80
            initialDelaySeconds: 100
            periodSeconds: 240
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 100
            periodSeconds: 240
          
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: regcred
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---
apiVersion: v1
kind: Service
metadata:
  name: new-listing-dev
  namespace: new-listing
  labels:
    app: new-listing-dev
    service: new-listing-dev
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: new-listing-dev

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-listing-dev
  namespace: new-listing
  annotations:
    nginx.ingress.kubernetes.io/default-backend: ingress-nginx-controller
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    kubernetes.io/ingress.class: nginx 
    ## tells ingress to check for regex in the config file
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, PATCH, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-max-age: "600"
#     nginx.ingress.kubernetes.io/configuration-snippet: |
#     more_set_headers "Access-Control-Allow-Origin: $http_origin";
    #certmanager.k8s.io/cluster-issuer: letsencrypt
#     kubernetes.io/ingress.class: nginx
#     service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"

spec:
  rules:
  - host: "new-listing.spleet.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: new-listing-dev
            port:
              number: 80



#manifest script for argocd-server
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.devops-project.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https



#manifest script for spleet-shortlist
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spleet-shortlet-dev
  namespace: spleet-shortlet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spleet-shortlet-dev
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: spleet-shortlet-dev
    spec:
      containers:
        - name: spleet-shortlet-dev
          image: spleet/spleet-shortlet-dev:4-1c1399c77f227e5fa03321177f5ea482823ab745
          ports:
          - containerPort: 80
            protocol: TCP
          livenessProbe:
            httpGet:
             path: /
             port: 80
            initialDelaySeconds: 400
            periodSeconds: 30
            failureThreshold: 4
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 400
            periodSeconds: 30
            TimeoutSeconds: 10
            failureThreshold: 4
          
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: regcred
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---
apiVersion: v1
kind: Service
metadata:
  name: spleet-shortlet-dev
  namespace: spleet-shortlet
  labels:
    app: spleet-shortlet-dev
    service: spleet-shortlet-dev
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: spleet-shortlet-dev

---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
  name: spleet-shortlet-dev
  namespace: spleet-shortlet
  annotations:
    nginx.ingress.kubernetes.io/default-backend: ingress-nginx-controller
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    kubernetes.io/ingress.class: nginx 
    ## tells ingress to check for regex in the config file
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, PATCH, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-max-age: "600"
#     nginx.ingress.kubernetes.io/configuration-snippet: |
#     more_set_headers "Access-Control-Allow-Origin: $http_origin";
    #certmanager.k8s.io/cluster-issuer: letsencrypt
#     kubernetes.io/ingress.class: nginx
#     service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"

 spec:
  rules:
  - host: "spleet-shortlet.spleet.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: newfrontend-dev
            port:
              number: 80
